--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-streamlit
-pandas
+streamlit==1.33.0
+streamlit-autorefresh==0.0.3
+requests==2.31.0
+pandas==2.2.2
+plotly==5.22.0
+numpy==1.26.4
+scikit-learn==1.4.2
+tensorflow==2.15.0
